@@ -51,6 +51,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     calls with temporary proxies
   * BackgroundSettings: use gnome-bg to generate textures with proper
     scaling (LP: #1666359)
+  * UnityWindow: safely check validity of UnityWindow from scaled one
+    (LP: #1659847)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
